# kfloppy

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CTestConfig.cmake  INSTALL  KFloppy.desktop  KFloppy.kdelnk  Mainpage.dox  Makefile.am  Makefile.am.test  Makefile.in  Makefile.in.orig  Messages.sh  README  TODO  about.cpp  about.h  configure.in.in  debug.h  floppy.cpp  floppy.h  floppy_format.desktop  format.cpp  format.h  kdeutils-version.h  kfdformat.c  kfloppy-0.2.lsm  kfloppy.categories  kfloppy.lsm  kfloppy.xpm  kfloppylogo.xpm  kmkdosfs.c  large-kfloppy.xpm  main.cpp  mini-kfloppy.xpm  mount.c  org.kde.kfloppy.appdata.xml  (+4 more)
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml  kfloppy-1.html  kfloppy-2.html  kfloppy-3.html  kfloppy-4.html  kfloppy-5.html  kfloppy.html  kfloppy.sgml
e2fs/: MCONFIG.in  Makefile.in  README.KFLOPPY  configure  configure.in
e2fs/lib/: substitute_sh
e2fs/lib/e2p/: uuid.c
e2fs/lib/et/: error_message.c  init_et.c
e2fs/lib/ext2fs/: dirblock.c  read_bb_file.c  swapfs.c
e2fs/lib/ss/: listen.c  prompt.c  test_ss.c
e2fs/lib/uuid/: pack.c  parse.c  unpack.c  uuidP.h
e2fs/misc/: Makefile.in  badblocks.c  mke2fs.c
legacy/: fdformat.c
legacy/mkdosfs-ygg-0.3b/: Makefile  mkdosfs.8  mkdosfs.c
po/af/: kfloppy.po
po/ar/: kfloppy.po
po/be/: kfloppy.po
po/bg/: kfloppy.po
po/br/: kfloppy.po
po/bs/: kfloppy.po
po/ca/: kfloppy.po
po/ca/docs/kfloppy/: index.docbook
po/ca@valencia/: kfloppy.po
po/cs/: kfloppy.po
po/cy/: kfloppy.po
po/da/: kfloppy.po
po/de/: kfloppy.po
po/de/docs/kfloppy/: index.docbook
po/el/: kfloppy.po
po/en_GB/: kfloppy.po
po/eo/: kfloppy.po
po/es/: kfloppy.po
po/es/docs/kfloppy/: index.docbook
po/et/: kfloppy.po
po/et/docs/kfloppy/: index.docbook
po/eu/: kfloppy.po
po/fa/: kfloppy.po
po/fi/: kfloppy.po
po/fr/: kfloppy.po
po/fr/docs/kfloppy/: index.docbook
po/ga/: kfloppy.po
po/gl/: kfloppy.po
po/gl/docs/kfloppy/: index.docbook
po/he/: kfloppy.po
po/hi/: kfloppy.po
po/hne/: kfloppy.po
po/hr/: kfloppy.po
po/hu/: kfloppy.po
po/ia/: kfloppy.po
po/id/: kfloppy.po
po/is/: kfloppy.po
po/it/: kfloppy.po
po/it/docs/kfloppy/: index.docbook
po/ja/: kfloppy.po
po/ka/: kfloppy.po
po/kk/: kfloppy.po
po/km/: kfloppy.po
po/ko/: kfloppy.po
po/lt/: kfloppy.po
po/lv/: kfloppy.po
po/mk/: kfloppy.po
po/mr/: kfloppy.po
po/ms/: kfloppy.po
po/nb/: kfloppy.po
po/nds/: kfloppy.po
po/ne/: kfloppy.po
po/nl/: kfloppy.po
po/nl/docs/kfloppy/: index.docbook
po/nn/: kfloppy.po
po/oc/: kfloppy.po
po/pa/: kfloppy.po
po/pl/: kfloppy.po
po/pt/: kfloppy.po
po/pt/docs/kfloppy/: index.docbook
po/pt_BR/: kfloppy.po
po/pt_BR/docs/kfloppy/: index.docbook
po/ro/: kfloppy.po
po/ru/: kfloppy.po
po/ru/docs/kfloppy/: index.docbook
po/se/: kfloppy.po
po/sk/: kfloppy.po
po/sl/: kfloppy.po
po/sl/docs/kfloppy/: index.docbook
po/sq/: kfloppy.po
po/sr/: kfloppy.po
po/sr/docs/kfloppy/: index.docbook
po/sr@ijekavian/: kfloppy.po
po/sr@ijekavianlatin/: kfloppy.po
po/sr@latin/: kfloppy.po
po/sr@latin/docs/kfloppy/: index.docbook
po/sv/: kfloppy.po
po/sv/docs/kfloppy/: index.docbook
po/ta/: kfloppy.po
po/tg/: kfloppy.po
po/th/: kfloppy.po
po/tr/: kfloppy.po
po/tr/docs/kfloppy/: index.docbook
po/ug/: kfloppy.po
po/uk/: kfloppy.po
po/uk/docs/kfloppy/: index.docbook
po/uz/: kfloppy.po
po/uz@cyrillic/: kfloppy.po
po/wa/: kfloppy.po
po/xh/: kfloppy.po
po/zh_CN/: kfloppy.po
po/zh_TW/: kfloppy.po
